--- a/paginas/saude004.html
+++ b/paginas/saude004.html
@@ -41,7 +41,7 @@
 		<img class="imagemtexto" src="/images/Personal.png">
         <p class="texto">Os resultados indicam um impacto positivo da supervisão do personal trainer nas sessões de treinamento de força. Houve um aumento significativo na carga total levantada, número total de repetições, tempo líquido sob tensão e percepção subjetiva de esforço durante a sessão supervisionada em comparação com a não supervisionada. Isso sugere que a presença e orientação de um personal trainer influenciam positivamente a intensidade e o esforço percebido durante o treinamento.</p>
         <p class="texto">Em conclusão, este estudo ressalta o papel fundamental da supervisão do personal trainer no treinamento de força de praticantes experientes. Os resultados mostram que a supervisão contribui para um aumento na carga total levantada, no número de repetições, no tempo sob tensão e na percepção de esforço. Portanto, para praticantes experientes em treinamento de força, a supervisão de um personal trainer pode ser benéfica para otimizar os resultados do treinamento.</p>
-        <p class="texto-autor">Por Prof. . <a href="#">@arroba</a> </p>
+        <p class="texto-autor">Por Prof. Esp. Guilherme Ribeiro <a href="www.https://www.instagram.com/guiiribeiro.personal/">@guiiribeiro.personal</a> </p>
 		
         <p class="texto-autor"><i>Embasado no artigo: Lopes, C. R., Soares, E. G., Oenning, L., Brigatto, F. A., & Marchetti, P. H. (2020). Supervised resistance training session increases the volume load and the subjective responses in well-trained men. Journal of Physical Education, 31(1), e-3144. https://doi.org/10.4025/jphyseduc.v31i1.3144</i></p>
         
