--- a/educacao.html
+++ b/educacao.html
@@ -38,6 +38,25 @@
 
 		<div class="articles-container">
 
+			<a class="article-educacao" href="/paginas/educacao003.html">
+				<figure class="article-image">
+				<img src="/images/educacao3-mini-banner.png">
+				</figure>
+				<div class="article-body">
+				<h2 class="article-title">
+					Benefícios dos Videogames na Aprendizagem: Além da Diversão, uma Ferramenta de Desenvolvimento
+				</h2>
+				<p class="article-content">
+					Os videogames, muitas vezes temidos por pais preocupados com o desempenho escolar de seus filhos, têm se mostrado como uma valiosa ferramenta de desenvolvimento. Longe de serem simples passatempos, os jogos eletrônicos têm o potencial de aprimorar habilidades cognitivas, promover o trabalho em equipe e até mesmo >>
+				</p>
+				<footer class="article-info">
+					<i>Por Prof. Me. Danilo A. Luz Jr.</i>
+				</footer>
+				</div>
+			</a>
+
+		<div class="articles-container">
+
 			<a class="article-educacao" href="/paginas/educacao001.html">
 				<figure class="article-image">
 				<img src="/images/educacao1-mini-banner.png">
@@ -77,17 +96,7 @@
 
 
 
-			<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7950959261306674"
-				crossorigin="anonymous"></script>
-		   		<ins class="adsbygoogle"
-				style="display:block"
-				data-ad-format="fluid"
-				data-ad-layout-key="-58+c9+16-1v+dp"
-				data-ad-client="ca-pub-7950959261306674"
-				data-ad-slot="9385621847"></ins>
-		   <script>
-				(adsbygoogle = window.adsbygoogle || []).push({});
-		   </script>
+		
 
     <footer class="footer">
         <div class="social-icons">
