--- a/saude.html
+++ b/saude.html
@@ -50,7 +50,7 @@
 					A prescrição individualizada e o acompanhamento das sessões de treinamento de força (TF) são funções cruciais dos personal trainers. No entanto, poucos estudos exploraram como a supervisão afeta praticantes experientes >>
 				</p>
 				<footer class="article-info">
-					<i>Por Prof. Esp. Agnaldo AP Ribeiro da Silva </i>
+					<i>Por Prof. Esp. Guilherme Ribeiro  </i>
 				</footer>
 				</div>
 			</a>
