--- a/educacao.html
+++ b/educacao.html
@@ -55,6 +55,25 @@
 				</div>
 			</a>
 
+			<div class="articles-container">
+
+				<a class="article-educacao" href="/paginas/educacao001.html">
+					<figure class="article-image">
+					<img src="/images/educacao4-mini-banner.png">
+					</figure>
+					<div class="article-body">
+					<h2 class="article-title">
+						Educação Digital: Transformando o Ensino Através da Tecnologia
+					</h2>
+					<p class="article-content">
+						A rápida evolução das inovações tecnológicas está promovendo uma revolução em diversos setores da sociedade, incluindo a educação. No entanto, essa transformação não é tarefa simples. A escola, representada por professores, gestores e coordenadores pedagógicos, enfrenta o desafio de integrar a cultura digital ao currículo, criando um ambiente de ensino dinâmico e interativo >>
+					</p>
+					<footer class="article-info">
+						<i>Por Valéria Maria A. S. Pontes</i>
+					</footer>
+					</div>
+				</a>
+
 		<div class="articles-container">
 
 			<a class="article-educacao" href="/paginas/educacao001.html">
