--- a/tecnologia.html
+++ b/tecnologia.html
@@ -56,6 +56,42 @@
 			</a>
 
 		<div class="articles-container">
+				<a class="article-educacao" href="/paginas/revolut.html">
+					<figure class="article-image">
+					<img src="/images/technologia4-mini-banner.png">
+					</figure>
+					<div class="article-body">
+					<h2 class="article-title">
+						A Revolut, uma das fintechs mais populares na Europa, chegou ao Brasil
+					</h2>
+					<p class="article-content">
+						Conhecida pelos brasileiros como a Nubank Europeia, a Revolut é uma das fintechs mais populares na Europa, chegou ao Brasil com sua conta digital, oferecendo aos brasileiros a facilidade de converter automaticamente dinheiro em até 27 moedas, incluindo dólar e euro, a qualquer momento do dia e com compatibilidade com Pix >>
+					</p>
+					<footer class="article-info">
+						<i>Por Beatriz Rocha</i>
+					</footer>
+					</div>
+			</a>
+
+		<div class="articles-container">
+				<a class="article-educacao" href="/paginas/tecnologia004.html">
+					<figure class="article-image">
+					<img src="/images/technologia6-mini-banner.png">
+					</figure>
+					<div class="article-body">
+					<h2 class="article-title">
+						Revolucionando a Educação em Saúde: O Papel da Tecnologia na Aprendizagem Contínua
+					</h2>
+					<p class="article-content">
+						A formação educacional é fundamental para a excelência na área da saúde, reconhecida nas diretrizes de capacitação dos profissionais de saúde. A aprendizagem contínua por meio da Educação Permanente (EP) emergiu como uma ferramenta estratégica para transformar currículos, práticas pedagógicas e serviços de saúde >>
+					</p>
+					<footer class="article-info">
+						<i>Por Maricelia Tavares Borges Oliveira</i>
+					</footer>
+					</div>
+			</a>
+
+		<div class="articles-container">
 			<a class="article-educacao" href="/paginas/tecnologia001.html">
 				<figure class="article-image">
 				<img src="/images/technologia2-mini-banner.png">
@@ -72,24 +108,6 @@
 				</footer>
 				</div>
 			</a>
-
-			<div class="articles-container">
-				<a class="article-educacao" href="/paginas/revolut.html">
-					<figure class="article-image">
-					<img src="/images/technologia4-mini-banner.png">
-					</figure>
-					<div class="article-body">
-					<h2 class="article-title">
-						Qual a nova forma para manter as crianças debaixo dos olhos? Os Apple AirTags
-					</h2>
-					<p class="article-content">
-						Conhecida pelos brasileiros como a Nubank Europeia, a Revolut é uma das fintechs mais populares na Europa, chegou ao Brasil com sua conta digital, oferecendo aos brasileiros a facilidade de converter automaticamente dinheiro em até 27 moedas, incluindo dólar e euro, a qualquer momento do dia e com compatibilidade com Pix >>
-					</p>
-					<footer class="article-info">
-						<i>Por Beatriz Rocha</i>
-					</footer>
-					</div>
-				</a>
 
 
 			<div class="articles-container">
