--- a/educacao.html
+++ b/educacao.html
@@ -57,6 +57,25 @@
 
 			<div class="articles-container">
 
+				<a class="article-educacao" href="/paginas/educacao005 .html">
+					<figure class="article-image">
+					<img src="/images/mini-banner-educação5.png">
+					</figure>
+					<div class="article-body">
+					<h2 class="article-title">
+						Desvendando a Arte da Liderança: Inspiração versus Autoritarismo
+					</h2>
+					<p class="article-content">
+						No turbilhão das redes sociais e no cenário corporativo, as diferenças entre líderes e chefes alimentam debates fervorosos. A verdade é que essas distinções não são apenas semânticas, mas delineiam abismos de ações. A metamorfose geracional tem acelerado a busca por coerência nas atitudes de liderança, rejeitando o ultrapassado lema do "faça o que eu digo, não o que eu faço" >>
+					</p>
+					<footer class="article-info">
+						<i>Por Kiko Campos</i>
+					</footer>
+					</div>
+				</a>
+
+			<div class="articles-container">
+
 				<a class="article-educacao" href="/paginas/educacao001.html">
 					<figure class="article-image">
 					<img src="/images/educacao4-mini-banner.png">
