--- a/saude.html
+++ b/saude.html
@@ -55,7 +55,25 @@
 				</div>
 			</a>
 
-		<div class="articles-container">
+			<div class="articles-container">
+
+				<a class="article-educacao" href="/paginas/saude005.html">
+					<figure class="article-image">
+					<img src="/images/saude5-mini-banner.png">
+					</figure>
+					<div class="article-body">
+					<h2 class="article-title">
+						O Impacto da Cerveja na Hidratação e Desempenho Esportivo: Um Olhar Científico
+					</h2>
+					<p class="article-content">
+						Aqueles que apreciam uma cerveja muitas vezes empregam diversos argumentos para justificar o seu consumo, expressões como: "após um dia de trabalho, é merecido desfrutar de uma cervejinha para relaxar," "a cerveja me auxilia a ter um sono mais tranquilo" e até mesmo "a cerveja favorece a interação social" são frequentemente utilizadas como respaldo >>
+					</p>
+					<footer class="article-info">
+						<i>Por Nutricionista Esp. Ricardo Galduroz</i>
+					</footer>
+					</div>
+				</a>	
+					<div class="articles-container">
 
 			<a class="article-educacao" href="/paginas/saude003.html">
 				<figure class="article-image">
@@ -73,6 +91,9 @@
 				</footer>
 				</div>
 			</a>
+		<div class="articles-container">
+
+
 
 			<a class="article-educacao" href="/paginas/saude001.html">
 				<figure class="article-image">
