--- a/saude.html
+++ b/saude.html
@@ -38,6 +38,25 @@
 
 		<div class="articles-container">
 
+			<a class="article-educacao" href="/paginas/saude006.html">
+				<figure class="article-image">
+				<img src="/images/saude6-mini-banner.png">
+				</figure>
+				<div class="article-body">
+				<h2 class="article-title">
+					Eficácia dos Programas de Perda de Peso na Redução da Dor Lombar: Uma Análise Abrangente
+				</h2>
+				<p class="article-content">
+					A dor lombar é uma afecção que afeta a qualidade de vida de muitas pessoas em todo o mundo. Este artigo analisa a relação entre dor lombar e obesidade, explorando a eficácia de programas de perda de peso como estratégia de alívio para essa condição >>
+				</p>
+				<footer class="article-info">
+					<i>Por Fisioterapeuta Do. Danilo Armbrust </i>
+				</footer>
+				</div>
+			</a>
+
+		<div class="articles-container">
+
 			<a class="article-educacao" href="/paginas/saude004.html">
 				<figure class="article-image">
 				<img src="/images/saude4-mini-banner.png">
@@ -50,7 +69,7 @@
 					A prescrição individualizada e o acompanhamento das sessões de treinamento de força (TF) são funções cruciais dos personal trainers. No entanto, poucos estudos exploraram como a supervisão afeta praticantes experientes >>
 				</p>
 				<footer class="article-info">
-					<i>Por Prof. Esp. Guilherme Ribeiro  </i>
+					<i>Por Prof. Esp. Agnaldo Ribeiro  </i>
 				</footer>
 				</div>
 			</a>
