--- a/saude.html
+++ b/saude.html
@@ -38,7 +38,7 @@
 
 		<div class="articles-container">
 
-			<a class="article-educacao" href="/paginas/saude006.html">
+			<a class="article" href="/paginas/saude006.html">
 				<figure class="article-image">
 				<img src="/images/saude6-mini-banner.png">
 				</figure>
@@ -57,7 +57,7 @@
 
 		<div class="articles-container">
 
-			<a class="article-educacao" href="/paginas/saude004.html">
+			<a class="article" href="/paginas/saude004.html">
 				<figure class="article-image">
 				<img src="/images/saude4-mini-banner.png">
 				</figure>
@@ -76,7 +76,7 @@
 
 			<div class="articles-container">
 
-				<a class="article-educacao" href="/paginas/saude005.html">
+				<a class="article" href="/paginas/saude005.html">
 					<figure class="article-image">
 					<img src="/images/saude5-mini-banner.png">
 					</figure>
@@ -94,7 +94,7 @@
 				</a>	
 					<div class="articles-container">
 
-			<a class="article-educacao" href="/paginas/saude003.html">
+			<a class="article" href="/paginas/saude003.html">
 				<figure class="article-image">
 				<img src="/images/saude3-mini-banner.png">
 				</figure>
@@ -114,7 +114,7 @@
 
 
 
-			<a class="article-educacao" href="/paginas/saude001.html">
+			<a class="article" href="/paginas/saude001.html">
 				<figure class="article-image">
 				<img src="/images/saude1-mini-banner.jpg">
 				</figure>
@@ -131,7 +131,7 @@
 				</div>
 			</a>
 
-			<a class="article-educacao" href="/paginas/saude002.html">
+			<a class="article" href="/paginas/saude002.html">
 				<figure class="article-image">
 				<img src="/images/saude2-mini-banner.png">
 				</figure>
