--- a/educacao.html
+++ b/educacao.html
@@ -38,7 +38,7 @@
 
 		<div class="articles-container">
 
-			<a class="article-educacao" href="/paginas/educacao003.html">
+			<a class="article" href="/paginas/educacao003.html">
 				<figure class="article-image">
 				<img src="/images/educacao3-mini-banner.png">
 				</figure>
@@ -57,7 +57,26 @@
 
 			<div class="articles-container">
 
-				<a class="article-educacao" href="/paginas/educacao005 .html">
+				<a class="article" href="/paginas/educacao006.html">
+					<figure class="article-image">
+					<img src="/images/educacao5-mini-banner.png">
+					</figure>
+					<div class="article-body">
+					<h2 class="article-title">
+						Transformação na Educação através da Tecnologia: Desenvolvimento de Competências para o Século XXI
+					</h2>
+					<p class="article-content">
+						A sociedade contemporânea enfrenta mudanças profundas nos âmbitos político, econômico e social, onde a informação e a comunicação desempenham papéis cruciais. O avanço das Tecnologias de Informação e Comunicação (TIC) impulsionou inovações em diversos setores, impactando o trabalho e, consequentemente, a educação. Diante disso, é imperativo repensar currículos e programas escolares para desenvolver habilidades cognitivas >>
+					</p>
+					<footer class="article-info">
+						<i>Por Kiko Campos</i>
+					</footer>
+					</div>
+				</a>
+
+			<div class="articles-container">
+
+				<a class="article" href="/paginas/educacao005 .html">
 					<figure class="article-image">
 					<img src="/images/mini-banner-educação5.png">
 					</figure>
@@ -76,7 +95,7 @@
 
 			<div class="articles-container">
 
-				<a class="article-educacao" href="/paginas/educacao001.html">
+				<a class="article" href="/paginas/educacao001.html">
 					<figure class="article-image">
 					<img src="/images/educacao4-mini-banner.png">
 					</figure>
@@ -95,7 +114,7 @@
 
 		<div class="articles-container">
 
-			<a class="article-educacao" href="/paginas/educacao001.html">
+			<a class="article" href="/paginas/educacao001.html">
 				<figure class="article-image">
 				<img src="/images/educacao1-mini-banner.png">
 				</figure>
@@ -114,7 +133,7 @@
 
 			<div class="articles-container">
 
-				<a class="article-educacao" href="/paginas/educacao002.html">
+				<a class="article" href="/paginas/educacao002.html">
 					<figure class="article-image">
 					<img src="/images/educacao2-mini-banner.png">
 					</figure>
