--- a/educacao.html
+++ b/educacao.html
@@ -38,7 +38,7 @@
 
 		<div class="articles-container">
 
-			<a class="article" href="/paginas/educacao003.html">
+			<a class="article-educacao" href="/paginas/educacao003.html">
 				<figure class="article-image">
 				<img src="/images/educacao3-mini-banner.png">
 				</figure>
@@ -57,7 +57,7 @@
 
 			<div class="articles-container">
 
-				<a class="article" href="/paginas/educacao006.html">
+				<a class="article-educacao" href="/paginas/educacao006.html">
 					<figure class="article-image">
 					<img src="/images/educacao5-mini-banner.png">
 					</figure>
@@ -76,7 +76,7 @@
 
 			<div class="articles-container">
 
-				<a class="article" href="/paginas/educacao005 .html">
+				<a class="article-educacao" href="/paginas/educacao005 .html">
 					<figure class="article-image">
 					<img src="/images/mini-banner-educação5.png">
 					</figure>
@@ -95,7 +95,7 @@
 
 			<div class="articles-container">
 
-				<a class="article" href="/paginas/educacao001.html">
+				<a class="article-educacao" href="/paginas/educacao001.html">
 					<figure class="article-image">
 					<img src="/images/educacao4-mini-banner.png">
 					</figure>
@@ -114,7 +114,7 @@
 
 		<div class="articles-container">
 
-			<a class="article" href="/paginas/educacao001.html">
+			<a class="article-educacao" href="/paginas/educacao001.html">
 				<figure class="article-image">
 				<img src="/images/educacao1-mini-banner.png">
 				</figure>
@@ -133,7 +133,7 @@
 
 			<div class="articles-container">
 
-				<a class="article" href="/paginas/educacao002.html">
+				<a class="article-educacao" href="/paginas/educacao002.html">
 					<figure class="article-image">
 					<img src="/images/educacao2-mini-banner.png">
 					</figure>
