--- a/tecnologia.html
+++ b/tecnologia.html
@@ -38,7 +38,7 @@
 
 
 		<div class="articles-container">
-			<a class="article" href="/paginas/tecnologia003.html">
+			<a class="article-educacao" href="/paginas/tecnologia003.html">
 				<figure class="article-image">
 				<img src="/images/technologia5-mini-banner.png">
 				</figure>
@@ -56,7 +56,7 @@
 			</a>
 
 		<div class="articles-container">
-				<a class="article" href="/paginas/revolut.html">
+				<a class="article-educacao" href="/paginas/revolut.html">
 					<figure class="article-image">
 					<img src="/images/technologia4-mini-banner.png">
 					</figure>
@@ -74,7 +74,7 @@
 			</a>
 
 		<div class="articles-container">
-				<a class="article" href="/paginas/tecnologia004.html">
+				<a class="article-educacao" href="/paginas/tecnologia004.html">
 					<figure class="article-image">
 					<img src="/images/technologia6-mini-banner.png">
 					</figure>
@@ -92,7 +92,7 @@
 			</a>
 
 		<div class="articles-container">
-			<a class="article" href="/paginas/tecnologia001.html">
+			<a class="article-educacao" href="/paginas/tecnologia001.html">
 				<figure class="article-image">
 				<img src="/images/technologia2-mini-banner.png">
 				</figure>
@@ -111,7 +111,7 @@
 
 
 			<div class="articles-container">
-				<a class="article" href="/paginas/tecnologia002.html">
+				<a class="article-educacao" href="/paginas/tecnologia002.html">
 					<figure class="article-image">
 					<img src="/images/technologia3-mini-banner.png">
 					</figure>
