--- a/tecnologia.html
+++ b/tecnologia.html
@@ -36,7 +36,6 @@
 
 		<p class="maislidas">Matérias mais lidas de Tecnologia: </p>
 
-
 		<div class="articles-container">
 			<a class="article-educacao" href="/paginas/tecnologia003.html">
 				<figure class="article-image">
@@ -51,6 +50,25 @@
 				</p>
 				<footer class="article-info">
 					<i>Por Alexandro Martello</i>
+				</footer>
+				</div>
+			</a>
+
+
+		<div class="articles-container">
+			<a class="article-educacao" href="/paginas/tecnologia005.html">
+				<figure class="article-image">
+				<img src="/images/technologia7-mini-banner.png">
+				</figure>
+				<div class="article-body">
+				<h2 class="article-title">
+					Brasil Ocupa 2.º Lugar no Ranking Global de Investimento em TI, Indica Estudo
+				</h2>
+				<p class="article-content">
+					Num relatório recente da Grant Thornton, abrangendo 28 países e inquirindo mais de 4,7 mil empreendedores, é evidente que o campo da Tecnologia da Informação (TI) continua a atrair a atenção das empresas brasileiras >>
+				</p>
+				<footer class="article-info">
+					<i>Por André Lopes</i>
 				</footer>
 				</div>
 			</a>
