--- a/tecnologia.html
+++ b/tecnologia.html
@@ -37,6 +37,24 @@
 		<p class="maislidas">Matérias mais lidas de Tecnologia: </p>
 
 		<div class="articles-container">
+			<a class="article-educacao" href="/paginas/tecnologia006.html">
+				<figure class="article-image">
+				<img src="/images/technologia8-mini-banner.png">
+				</figure>
+				<div class="article-body">
+				<h2 class="article-title">
+					Cuidado Steam Deck! Chegou o novo console portátil, o Lenovo Legion Go.
+				</h2>
+				<p class="article-content">
+					O mercado de consoles portáteis está em alta, impulsionado pelo lançamento da Steam Deck, mas agora a Lenovo Legion Go surge como concorrente de peso. Esta nova consola portátil, apresentada pela empresa asiática, não se limita ao gaming, oferecendo versatilidade para diversas necessidades dos utilizadores. >>
+				</p>
+				<footer class="article-info">
+					<i>Por Carlos Oliveira</i>
+				</footer>
+				</div>
+			</a>
+
+		<div class="articles-container">
 			<a class="article-educacao" href="/paginas/tecnologia003.html">
 				<figure class="article-image">
 				<img src="/images/technologia5-mini-banner.png">
